layout bug fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,11 @@ body {
   flex-basis: 0;
 }
 
+.flex-custom-2-2{
+  flex-grow: 2.2;
+  flex-basis: 0;
+}
+
 .flex-custom-1-2 {
   flex-grow: 1.2;
   flex-basis: 0;
